# pacioli

./: .buildinfo  CHANGELOG.rst  README.rst  changelog.html  genindex.html  glossary.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  todos.html
.doctrees/: about.doctree  changelog.doctree  connect.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  todos.doctree
.doctrees/demos/: demo.doctree  index.doctree
.doctrees/divina/: index.doctree
.doctrees/mission/: index.doctree
.doctrees/modules/: index.doctree
.doctrees/modules/api/: index.doctree
.doctrees/refs/: index.doctree
.doctrees/usage/: index.doctree
.github/workflows/: action.yml
_modules/pacioli/: run_parse.html
_sources/: index.rst.txt
demos/: demo.html  index.html
divina/proportione/: index.html
docs/: .buildinfo  about.html  changelog.html  connect.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  todos.html
docs/_modules/: index.html  pacioli.html
docs/demos/: demo.html  index.html
docs/divina/: index.html
docs/mission/: index.html
docs/modules/: index.html
docs/refs/: index.html
docs/usage/: index.html
docsrc/: conf.py  index.rst  intro.rst
docsrc/modules/: index.rst
mission/: index.html
modules/: index.html
modules/api/: index.html
refs/: index.html
resources/de_divina_proportione/: Structure and Summary.md  gri-ark--13960-t2w39826z-1680995441.txt  gri-ark--13960-t48p7rw0p-1680998311.txt  thirteen effects.md
usage/: index.html
(+555 files in other folders)
