[project]
name = "geometor-pacioli"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "tracking the works of Fra Luca Pacioli"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "rich",
    "jinja2",
]

[project.scripts]
pacioli = "geometor.pacioli.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.pacioli.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/pacioli"
"Repository" = "https://github.com/geometor/pacioli"
"Issues" = "https://github.com/geometor/pacioli/issues"